--- a/app/src/main/res/layout/activity_add_tag.xml
+++ b/app/src/main/res/layout/activity_add_tag.xml
@@ -19,6 +19,7 @@
 -->
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -38,5 +39,13 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_add_tag" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_save_tag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@drawable/save_kino" />
 
 </android.support.design.widget.CoordinatorLayout>
